--- a/RD3/Views/MsgView.xaml
+++ b/RD3/Views/MsgView.xaml
@@ -36,19 +36,29 @@
 
             <StackPanel
                 Grid.Row="2"
-                Margin="10,10,5,10"
+                Margin="5"
                 HorizontalAlignment="Right"
                 Orientation="Horizontal">
                 <Button
-                    Command="{Binding SaveCommand}"
-                    Content="{ex:Language Key='OK'}"
-                    Style="{StaticResource MaterialDesignOutlinedButton}" />
-                <Button
-                    Margin="5,0,0,0"
+                    Width="75"
+                    Height="30"
+                    Margin="5"
+                    HorizontalAlignment="Right"
+                    HorizontalContentAlignment="Center"
+                    BorderBrush="{StaticResource PrimaryBrush}"
                     Command="{Binding CancelCommand}"
                     Content="{ex:Language Key='Cancel'}"
-                    Style="{StaticResource MaterialDesignOutlinedButton}"
-                    Visibility="{Binding CancelVisible, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                    FontSize="{DynamicResource NormalFontSize}"
+                    Foreground="{StaticResource PrimaryBrush}" />
+                <Button
+                    Width="75"
+                    Height="30"
+                    Margin="5"
+                    Background="{StaticResource PrimaryBrush}"
+                    BorderBrush="{StaticResource PrimaryBrush}"
+                    Command="{Binding SaveCommand}"
+                    Content="{ex:Language Key='OK'}"
+                    Foreground="White" />
             </StackPanel>
         </Grid>
     </Border>
